profilelist1exp/unpackaged/objects/Octane_Segment_Quantity_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Segment and Quantity Mapping</description>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment_Business_Unit_Name__c</fullName>
        <label>Segment Business Unit Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Segment_Name__c</fullName>
        <label>Segment Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Octane_Segment_Quantity_Mapping</label>
    <listViews>
        <fullName>Segment_Quantity_Mapping</fullName>
        <columns>NAME</columns>
        <columns>Segment_Business_Unit_Name__c</columns>
        <columns>Segment_Name__c</columns>
        <columns>IsActive__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>Segment Quantity Mapping</label>
        <language>en_US</language>
    </listViews>
</CustomObject>